--- a/src/bilbioteca2/aplicacion/VentanaAdmin.form
+++ b/src/bilbioteca2/aplicacion/VentanaAdmin.form
@@ -61,48 +61,49 @@
                   <Component id="jLabel_Cerrar" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" max="-2" attributes="0"/>
               </Group>
-              <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace max="32767" attributes="0"/>
-                  <Component id="jLabel_Usuario" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
-              </Group>
               <Group type="102" attributes="0">
-                  <Group type="103" groupAlignment="0" attributes="0">
+                  <EmptySpace min="-2" pref="68" max="-2" attributes="0"/>
+                  <Component id="jRB_Autor" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
+                  <Component id="jRB_Titulo" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
+                  <Component id="jRB_Editorial" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
+                  <Component id="jRB_ISBN" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
+                  <Component id="jRB_Publicacion" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
+                  <Component id="jRB_Seccion" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace pref="170" max="32767" attributes="0"/>
+              </Group>
+              <Group type="102" alignment="1" attributes="0">
+                  <Group type="103" groupAlignment="1" attributes="0">
                       <Group type="102" attributes="0">
                           <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" alignment="1" attributes="0">
-                                  <EmptySpace min="-2" pref="97" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="1" attributes="0">
+                              <Group type="102" attributes="0">
                                   <Component id="jLabel_buscador" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Component id="jTF_Busqueda" min="-2" pref="346" max="-2" attributes="0"/>
                                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                   <Component id="jL_Buscar" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="128" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="95" max="-2" attributes="0"/>
                                   <Component id="jL_mostarFiltros" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <Component id="jSeparator1" alignment="0" min="-2" pref="776" max="-2" attributes="0"/>
-                              <Component id="jScrollPane1" alignment="0" min="-2" pref="776" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="jSeparator1" alignment="0" min="-2" pref="776" max="-2" attributes="0"/>
+                                  <Component id="jScrollPane1" alignment="0" min="-2" pref="776" max="-2" attributes="0"/>
+                              </Group>
                           </Group>
-                          <EmptySpace max="-2" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
                           <Component id="jB_verLibro" min="-2" pref="111" max="-2" attributes="0"/>
                       </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="-2" pref="68" max="-2" attributes="0"/>
-                          <Component id="jRB_Autor" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
-                          <Component id="jRB_Titulo" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
-                          <Component id="jRB_Editorial" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
-                          <Component id="jRB_ISBN" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
-                          <Component id="jRB_Publicacion" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
-                          <Component id="jRB_Seccion" min="-2" max="-2" attributes="0"/>
+                      <Group type="102" attributes="0">
+                          <EmptySpace max="32767" attributes="0"/>
+                          <Component id="jLabel_Usuario" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace pref="28" max="32767" attributes="0"/>
+                  <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -110,50 +111,46 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
+                  <Component id="jLabel_Usuario" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
+                      <Component id="jTF_Busqueda" alignment="1" min="-2" pref="29" max="-2" attributes="0"/>
+                      <Component id="jLabel_buscador" alignment="1" min="-2" max="-2" attributes="0"/>
+                      <Component id="jL_Buscar" alignment="1" min="-2" max="-2" attributes="0"/>
+                      <Component id="jL_mostarFiltros" min="-2" pref="29" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <Component id="jSeparator1" min="-2" pref="10" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="jRB_Autor" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jRB_Titulo" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jRB_Editorial" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jRB_ISBN" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jRB_Publicacion" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jRB_Seccion" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
-                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="jAñadirUsuario" alignment="3" min="-2" pref="63" max="-2" attributes="0"/>
-                              <Component id="JEliminarUsuario" alignment="3" min="-2" pref="64" max="-2" attributes="0"/>
-                              <Component id="jNuevoPrestamo" alignment="3" min="-2" pref="64" max="-2" attributes="0"/>
-                              <Component id="jDevolverPrestamo" alignment="3" min="-2" pref="64" max="-2" attributes="0"/>
-                              <Component id="jBorrarLibro" alignment="3" min="-2" pref="64" max="-2" attributes="0"/>
-                              <Component id="jAñadirLibro" alignment="3" min="-2" pref="64" max="-2" attributes="0"/>
-                          </Group>
+                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                          <Component id="jScrollPane1" min="-2" pref="269" max="-2" attributes="0"/>
+                          <EmptySpace min="0" pref="39" max="32767" attributes="0"/>
                       </Group>
-                      <Group type="102" attributes="0">
-                          <Component id="jLabel_Usuario" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="1" attributes="0">
-                              <Component id="jTF_Busqueda" alignment="1" min="-2" pref="29" max="-2" attributes="0"/>
-                              <Component id="jLabel_buscador" alignment="1" min="-2" max="-2" attributes="0"/>
-                              <Component id="jL_Buscar" alignment="1" min="-2" max="-2" attributes="0"/>
-                              <Component id="jL_mostarFiltros" alignment="1" min="-2" pref="29" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="jSeparator1" min="-2" pref="10" max="-2" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="jRB_Autor" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="jRB_Titulo" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="jRB_Editorial" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="jRB_ISBN" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="jRB_Publicacion" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="jRB_Seccion" alignment="3" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" attributes="0">
-                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                  <Component id="jScrollPane1" min="-2" pref="269" max="-2" attributes="0"/>
-                              </Group>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <EmptySpace min="-2" pref="63" max="-2" attributes="0"/>
-                                  <Component id="jB_verLibro" min="-2" pref="65" max="-2" attributes="0"/>
-                              </Group>
-                          </Group>
-                          <EmptySpace min="0" pref="53" max="32767" attributes="0"/>
-                          <Component id="jLabel_Cerrar" min="-2" max="-2" attributes="0"/>
+                      <Group type="102" alignment="1" attributes="0">
+                          <EmptySpace max="32767" attributes="0"/>
+                          <Component id="jB_verLibro" min="-2" pref="65" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="177" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="jLabel_Cerrar" alignment="1" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" alignment="1" groupAlignment="3" attributes="0">
+                          <Component id="jAñadirUsuario" alignment="3" min="-2" pref="63" max="-2" attributes="0"/>
+                          <Component id="JEliminarUsuario" alignment="3" min="-2" pref="64" max="-2" attributes="0"/>
+                          <Component id="jNuevoPrestamo" alignment="3" min="-2" pref="64" max="-2" attributes="0"/>
+                          <Component id="jDevolverPrestamo" alignment="3" min="-2" pref="64" max="-2" attributes="0"/>
+                          <Component id="jBorrarLibro" alignment="3" min="-2" pref="64" max="-2" attributes="0"/>
+                          <Component id="jAñadirLibro" alignment="3" min="-2" pref="64" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
