--- a/src/bilbioteca2/aplicacion/AñadirPrestamo.form
+++ b/src/bilbioteca2/aplicacion/AñadirPrestamo.form
@@ -94,7 +94,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="A&#xf1;adir pr&#xe9;stamo:"/>
+            <Property name="text" type="java.lang.String" value="A&#xf1;adir pr&#xe9;stamo"/>
           </Properties>
         </Component>
         <Container class="javax.swing.JPanel" name="jPanel2">
